syntax = "proto3";

                 package masterdataRole;
service MasterdataRoleService {
 rpc createMasterdataRole (MasterdataRoleCreateInput) returns (MasterdataRole) {}
rpc masterdataRoles (findManyParams) returns (stream MasterdataRole) {}
rpc masterdataRole (MasterdataRoleWhereUniqueInput) returns (MasterdataRole) {}
rpc updateMasterdataRole (MasterdataRoleUpdateInput) returns (MasterdataRole) {}
rpc deleteMasterdataRole (MasterdataRoleWhereUniqueInput) returns (MasterdataRole) {} 
 }
message MasterdataRoleCreateInput {
string code = 1;
string description = 2;
string id = 3;
string name = 4;
};
message MasterdataRole {
string code = 1;
string description = 2;
string id = 3;
string name = 4;
};
message MasterdataRoleWhereUniqueInput {
string code = 1;
string description = 2;
string id = 3;
string name = 4;
};
message MasterdataRoleUpdateInput {
string code = 1;
string description = 2;
string id = 3;
string name = 4;
};
message findManyParams {

};