syntax = "proto3";

                 package masterdataTask;
service MasterdataTaskService {
 rpc createMasterdataTask (MasterdataTaskCreateInput) returns (MasterdataTask) {}
rpc masterdataTasks (findManyParams) returns (stream MasterdataTask) {}
rpc masterdataTask (MasterdataTaskWhereUniqueInput) returns (MasterdataTask) {}
rpc updateMasterdataTask (MasterdataTaskUpdateInput) returns (MasterdataTask) {}
rpc deleteMasterdataTask (MasterdataTaskWhereUniqueInput) returns (MasterdataTask) {} 
 }
message MasterdataTaskCreateInput {
string configField = 1;
string description = 2;
string id = 3;
bool isActive = 4;
string name = 5;
};
message MasterdataTask {
string configField = 1;
string description = 2;
string id = 3;
bool isActive = 4;
string name = 5;
};
message MasterdataTaskWhereUniqueInput {
string configField = 1;
string description = 2;
string id = 3;
bool isActive = 4;
string name = 5;
};
message MasterdataTaskUpdateInput {
string configField = 1;
string description = 2;
string id = 3;
bool isActive = 4;
string name = 5;
};
message findManyParams {

};